fixtures/benchmark/negatives/n09.py
def model_name_example(): return "gpt-5-chat-latest"
